# external-monitor-brightness

./: README.md  install.sh  pyproject.toml
config/: config.example.json  config.json
src/app/: __init__.py  application.py
